User Login, User Registration, Password Security  - Implemented user, user_group, and user_password tables in the SQL database  - Implemented Login, Registration UI  - Implemented Login, Registration backend         - Users can now register and login to the system

--- a/Majorizor/Majorizor.Master
+++ b/Majorizor/Majorizor.Master
@@ -17,20 +17,22 @@
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" 
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="Default.aspx">Majorizer</a>
+                    <a class="navbar-brand" href="Default.aspx">Majorizor</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Students <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+								aria-haspopup="true" aria-expanded="false">Students <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Action</a></li>
                                 <li><a href="#">Another action</a></li>
@@ -42,7 +44,8 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Advisors <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+								aria-haspopup="true" aria-expanded="false">Advisors <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Action</a></li>
                                 <li><a href="#">Another action</a></li>
@@ -54,7 +57,8 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admins <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+								aria-haspopup="true" aria-expanded="false">Admins <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Action</a></li>
                                 <li><a href="#">Another action</a></li>
@@ -69,8 +73,8 @@
                     </ul>
                 
                     <!-- Buttons -->
-                    <a href="#" class="btn btn-default navbar-btn navbar-right" type="button">Logout</a>
-                    <a href="Login.aspx" class="btn btn-default navbar-btn navbar-right" type="button">Login</a>
+                <asp:Button id="loginNavbar" runat="server" class="btn btn-default navbar-btn navbar-right" Text="Login" OnClick="loginNavbar_Click" />
+                <asp:Button id="LogoutNavBar" runat="server" class="btn btn-default navbar-btn navbar-right" Text="Logout" OnClick="LogoutNavBar_Click" />
                 
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
