--- a/Majorizor/Majorizor.Master
+++ b/Majorizor/Majorizor.Master
@@ -24,13 +24,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/Default.aspx">Majorizor</a>
+                    <a class="navbar-brand" id="navBar_Brand" runat="server">Majorizor</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
+                        <li class="dropdown" id="student_dropDown" runat="server">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
 								aria-haspopup="true" aria-expanded="false">Students <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -43,7 +43,7 @@
                                 <li><a href="#">One more separated link</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown">
+                        <li class="dropdown" id="advisor_dropDown" runat="server">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
 								aria-haspopup="true" aria-expanded="false">Advisors <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -56,7 +56,7 @@
                                 <li><a href="#">One more separated link</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown">
+                        <li class="dropdown" id="admin_dropDown" runat="server">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
 								aria-haspopup="true" aria-expanded="false">Admins <span class="caret"></span></a>
                             <ul class="dropdown-menu">
