--- a/Majorizor/Majorizor.Master
+++ b/Majorizor/Majorizor.Master
@@ -49,13 +49,8 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
 								aria-haspopup="true" aria-expanded="false">Advisors <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
+                                <li><a href="/Screens/Advisors/AdvisorLanding.aspx">Advisor Home</a></li>
+                                <li><a href="/Screens/Advisors/SelectAdvisees.aspx">Select Advisees</a></li>
                             </ul>
                         </li>
                         <li id="admin_dropDown" runat="server"><a href="/Screens/Admins/AdminLanding.aspx">Admins </a></li>
