--- a/Majorizor/Majorizor.Master
+++ b/Majorizor/Majorizor.Master
@@ -36,13 +36,10 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
 								aria-haspopup="true" aria-expanded="false">Students <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
+                                <li><a href="/Screens/Students/StudentLanding.aspx">Student Home</a></li>
+                                <li><a href="/Screens/Students/MajorMinorSelection.aspx">Major & Minor Selection</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
                             </ul>
                         </li>
                         <li class="dropdown" id="advisor_dropDown" runat="server">
