--- a/Majorizor/Majorizor.Master
+++ b/Majorizor/Majorizor.Master
@@ -68,7 +68,7 @@
         <div class="alert alert-info">
             <strong>Under Construction!</strong> 
                 <p>This site is currently under construction. You may encounter unfinished pages and bugs. Please be patient while we continue to work on the system.</p>
-                <p>- The Majorizor Team</p>
+                <p>Thanks, <br /> The Majorizor Team</p>
         </div>
 
         <asp:ContentPlaceHolder ID="MainMaster_MainContent" runat="server">
