REMOVE ME WHEN DONE

--- a/Majorizor/Majorizor.Master
+++ b/Majorizor/Majorizor.Master
@@ -65,6 +65,7 @@
         </nav>
         <div class="container">
             
+        <!-- REMOVE THIS WHEN DOOOONNNNEEEEE!!!! -->
         <div class="alert alert-info">
             <strong>Under Construction!</strong> 
                 <p>This site is currently under construction. You may encounter unfinished pages and bugs. Please be patient while we continue to work on the system.</p>
